--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" type="text/css" media="all" href="css/demo01.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="css/jquery.fullPage.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="css/jquery.fullpage.css" />
 </head>
 <body>
     <div id="fullpage">
