update res path

--- a/v2/index.html
+++ b/v2/index.html
@@ -4,11 +4,11 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>HBiang Demo</title>
-      <link rel="stylesheet" media="screen" href="/res/lib/tether/css/tether.min.css">
-      <link rel="stylesheet" media="screen" href="/res/lib/bootstrap/css/meteria.css">
+      <title>HBiang Demo V2</title>
+      <link rel="stylesheet" media="screen" href="/v2/res/lib/tether/css/tether.min.css">
+      <link rel="stylesheet" media="screen" href="/v2/res/lib/bootstrap/css/meteria.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-      <link rel="stylesheet" media="screen" href="/res/css/index.css">
+      <link rel="stylesheet" media="screen" href="/v2/res/css/index.css">
    </head>
    <body>
       <nav class="navbar navbar-light scrolling-navbar bg-faded">
@@ -42,17 +42,17 @@
             <br class="hidden-sm-down" />
             <div class="row">
                <div class="col-xs-10 offset-xs-1 col-sm-5">
-                  <img class="img-fluid" alt="Responsive image" id="img-page01-logo" src="/res/images/logo.png" />
+                  <img class="img-fluid" alt="Responsive image" id="img-page01-logo" src="/v2/res/images/logo.png" />
                </div>
                <div class="col-xs-6 push-xs-3 col-sm-4 push-sm-2">
-                  <img class="img-fluid" alt="Responsive image" id="img-page01-dalat" src="/res/images/page01-dalat.png" />
+                  <img class="img-fluid" alt="Responsive image" id="img-page01-dalat" src="/v2/res/images/page01-dalat.png" />
                </div>
                <div class="hidden-xs-down col-sm-12" id="page01-padding-01"></div>
                <div class="col-xs-6 offset-xs-3 col-sm-4 offset-sm-7">
-                  <img class="img-fluid" alt="Responsive image" id="img-page01-slogan" src="/res/images/page01-slogan.png" />
+                  <img class="img-fluid" alt="Responsive image" id="img-page01-slogan" src="/v2/res/images/page01-slogan.png" />
                </div>
                <div class="col-sm-10 offset-sm-1">
-                  <img class="img-fluid" src="/res/images/page01-banner.png" style="margin-top:1.5rem" />
+                  <img class="img-fluid" src="/v2/res/images/page01-banner.png" style="margin-top:1.5rem" />
                </div>
             </div>
          </div>
@@ -63,7 +63,7 @@
           <div class="container">
               <div class="row">
                    <div class="mx-auto" style="width: 20%">
-                        <img class="img-fluid" alt="Responsive image" id="img-page06-sanpham" src="/res/images/page06-sanpham.png" />
+                        <img class="img-fluid" alt="Responsive image" id="img-page06-sanpham" src="/v2/res/images/page06-sanpham.png" />
                     </div>
               </div>
               <div class="row" style="min-height: 300px;">
@@ -77,22 +77,22 @@
          <div class="container">
             <div class="row">
                <div class="mx-auto" style="width: 20%">
-                  <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem" src="/res/images/page02-dacdiem.png" />
+                  <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem" src="/v2/res/images/page02-dacdiem.png" />
                </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-5 offset-sm-1" style="margin-top:2rem;">
-                    <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem01" src="/res/images/page02-dacdiem01.png" />
+                    <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem01" src="/v2/res/images/page02-dacdiem01.png" />
                 </div>
                 <div class="col-sm-5 offset-sm-1" style="margin-top:2rem;">
-                    <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem02" src="/res/images/page02-dacdiem02.png" />
+                    <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem02" src="/v2/res/images/page02-dacdiem02.png" />
                 </div>
                 <div class="col-sm-5 offset-sm-1" style="margin-top:2rem;">
-                    <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem03" src="/res/images/page02-dacdiem03.png" />
+                    <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem03" src="/v2/res/images/page02-dacdiem03.png" />
                 </div>
                 <div class="col-sm-5 offset-sm-1" style="margin-top:2rem;">
-                    <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem04" src="/res/images/page02-dacdiem04.png" />
+                    <img class="img-fluid" alt="Responsive image" id="img-page02-dacdiem04" src="/v2/res/images/page02-dacdiem04.png" />
                 </div>
             </div>
          </div>
@@ -104,10 +104,10 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-7 offset-sm-2 col-xs-6">
-                <img class="img-fluid" alt="Responsive image" id="img-page03-dichvu" src="/res/images/page03-dichvu.png" />
+                <img class="img-fluid" alt="Responsive image" id="img-page03-dichvu" src="/v2/res/images/page03-dichvu.png" />
             </div>
             <div class="col-sm-7 offset-sm-2  col-xs-10">
-                <img class="img-fluid" alt="Responsive image" id="img-page03-noidung" src="/res/images/page03-noidung.png" />
+                <img class="img-fluid" alt="Responsive image" id="img-page03-noidung" src="/v2/res/images/page03-noidung.png" />
             </div>
         </div>
     </div>
@@ -117,7 +117,7 @@
     <div class="container">
         <div class="row">
             <div class="mx-auto" style="width: 20%;padding-bottom: 2rem;">
-                <img class="img-fluid" alt="Responsive image" id="img-page03-noidung" src="/res/images/page04-lienhe.png" />
+                <img class="img-fluid" alt="Responsive image" id="img-page03-noidung" src="/v2/res/images/page04-lienhe.png" />
             </div>
         </div>
         <div class="row">
@@ -203,8 +203,8 @@
     <div style="min-height: 300px"></div>
 </div>
 
-      <script src="/res/lib/jquery/jquery.min.js"></script>
-      <script src="/res/lib/tether/js/tether.js"></script>
-      <script src="/res/lib/bootstrap/js/bootstrap.js"></script>
+      <script src="/v2/res/lib/jquery/jquery.min.js"></script>
+      <script src="/v2/res/lib/tether/js/tether.js"></script>
+      <script src="/v2/res/lib/bootstrap/js/bootstrap.js"></script>
    </body>
 </html>
