--- a/v2/index.html
+++ b/v2/index.html
@@ -19,24 +19,25 @@
             <div class="collapse navbar-toggleable-xs" id="collapseEx2">
                <ul class="nav navbar-nav offset-sm-1">
                   <li class="nav-item">
-                     <a class="nav-link" href="#">TRANG CHỦ</a>
+                     <a class="nav-link" href="#home">TRANG CHỦ</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">ĐẶC ĐIỂM</a>
+                     <a class="nav-link" href="#features">ĐẶC ĐIỂM</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">SẢN PHẨM</a>
+                     <a class="nav-link" href="#products">SẢN PHẨM</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">DỊCH VỤ</a>
+                     <a class="nav-link" href="#services">DỊCH VỤ</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#">LIÊN HỆ</a>
+                     <a class="nav-link" href="#contact">LIÊN HỆ</a>
                   </li>
                </ul>
             </div>
          </div>
       </nav>
+      <a id="home" />
       <div id="page-01" class="clearfix">
          <div class="container">
             <br class="hidden-sm-down" />
@@ -57,7 +58,7 @@
             </div>
          </div>
       </div>
-
+      <a id="products" />
       <!-- Sản phẩm -->
       <div id="page-06" style="margin-top:3rem;">
           <div class="container">
@@ -72,6 +73,7 @@
           </div>
       </div>
 
+      <a id="features" />
       <!-- Đặc điểm -->
       <div id="page-02"  style="margin-top: 3rem;">
          <div class="container">
@@ -100,6 +102,7 @@
       </div>
       </div>
 
+      <a id="services" />
 <div id="page-03"  style="margin-top: 3rem;">
     <div class="container">
         <div class="row">
@@ -113,6 +116,7 @@
     </div>
 </div>
 
+<a id="contact" />
 <div id="page-04" style="margin-top: 3rem;">
     <div class="container">
         <div class="row">
@@ -200,7 +204,7 @@
             </div>
         </div>
     </div>
-    <div style="min-height: 300px"></div>
+    
 </div>
 
       <script src="/v2/res/lib/jquery/jquery.min.js"></script>
