add product page

--- a/v2/index.html
+++ b/v2/index.html
@@ -68,7 +68,9 @@
                     </div>
               </div>
               <div class="row" style="min-height: 300px;">
-                  
+                    <div class="offset-xs-1">
+                        <img class="img-fluid" alt="Responsive image" id="img-page06-sanpham-bg" src="/v2/res/images/page06-sanpham-bg.png" />
+                    </div>                  
               </div>
           </div>
       </div>
