--- a/v2/index.html
+++ b/v2/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>HBiang Demo V2</title>
+      <title>H'Biang Demo 02</title>
       <link rel="stylesheet" media="screen" href="/v2/res/lib/tether/css/tether.min.css">
       <link rel="stylesheet" media="screen" href="/v2/res/lib/bootstrap/css/meteria.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -67,11 +67,36 @@
                         <img class="img-fluid" alt="Responsive image" id="img-page06-sanpham" src="/v2/res/images/page06-sanpham.png" />
                     </div>
               </div>
-              <div class="row" style="min-height: 300px;">
+              <div class="row" style="">
                     <div class="offset-xs-1">
                         <img class="img-fluid" alt="Responsive image" id="img-page06-sanpham-bg" src="/v2/res/images/page06-sanpham-bg.png" />
                     </div>                  
               </div>
+              
+            <div class="card-deck">
+              <div class="card">
+                <img class="card-img-top img-fluid" src="/v2/res/images/page06-sanpham-01.png " style="width:100%" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>               
+              </div>
+              <div class="card">
+                <img class="card-img-top img-fluid" src="/v2/res/images/page06-sanpham-01.png"  style="width:100%" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>               
+              </div>
+              <div class="card">
+                <img class="card-img-top img-fluid" src="/v2/res/images/page06-sanpham-01.png"  style="width:100%" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>                
+              </div>
+            </div>
+              
           </div>
       </div>
 
@@ -108,13 +133,13 @@
 <div id="page-03"  style="margin-top: 3rem;">
     <div class="container">
         <div class="row">
-            <div class="col-sm-7 offset-sm-2 col-xs-6">
+            <div class="col-sm-7 offset-sm-1 col-xs-6">
                 <img class="img-fluid" alt="Responsive image" id="img-page03-dichvu" src="/v2/res/images/page03-dichvu.png" />
             </div>
-            <div class="col-sm-7 offset-sm-2  col-xs-10">
+            <div class="col-sm-7 offset-sm-1  col-xs-10">
                 <img class="img-fluid" alt="Responsive image" id="img-page03-noidung" src="/v2/res/images/page03-noidung.png" />
             </div>
-        </div>
+        </div>        
     </div>
 </div>
 
