--- a/v2/index.html
+++ b/v2/index.html
@@ -73,26 +73,53 @@
                     </div>                  
               </div>
               
-            <div class="card-deck">
+            <div class="card-deck" style="margin-top:20px;">
               <div class="card">
-                <img class="card-img-top img-fluid" src="/v2/res/images/page06-sanpham-01.png " style="width:100%" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="/v2/res/images/page06-sanpham-01.png " style="width:100%;margin-top:1rem;" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">Card title</h4>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h4 class="card-title text-xs-center">HBIANG</h4>
+                  <p class="text-xs-center">
+                    <img src="/v2/res/images/star.png" class="center-block">
+                  </p>
+                  <p class="card-text text-xs-center">
+                    <strong>Sảng khoái</strong><br/>
+                    <i>vị thanh, mùi hương tinh tế</i>                    
+                  </p>                   
+                   <p class="card-text text-xs-center">                   
+                    <strong>175K/GÓI 250G</strong>
+                  </p>
                 </div>               
               </div>
               <div class="card">
                 <img class="card-img-top img-fluid" src="/v2/res/images/page06-sanpham-01.png"  style="width:100%" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">Card title</h4>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h4 class="card-title text-xs-center">HBIANG</h4>
+                  <p class="text-xs-center">
+                    <img src="/v2/res/images/2stars.png" class="center-block">
+                  </p>
+                   <p class="card-text text-xs-center">
+                    <strong>Sảng khoái</strong><br/>
+                    <i>vị thanh, mùi hương tinh tế</i>                    
+                  </p>                   
+                   <p class="card-text text-xs-center">                   
+                    <strong>175K/GÓI 250G</strong>
+                  </p>
                 </div>               
               </div>
               <div class="card">
                 <img class="card-img-top img-fluid" src="/v2/res/images/page06-sanpham-01.png"  style="width:100%" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">Card title</h4>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <h4 class="card-title text-xs-center">HBIANG</h4>
+                  <p class="text-xs-center">
+                    <img src="/v2/res/images/3stars.png" class="center-block">
+                  </p>
+                   <p class="card-text text-xs-center">
+                    <strong>Sảng khoái</strong><br/>
+                    <i>vị thanh, mùi hương tinh tế</i>                    
+                  </p>                   
+                   <p class="card-text text-xs-center">                   
+                    <strong>175K/GÓI 250G</strong>
+                  </p>
                 </div>                
               </div>
             </div>
