--- a/v2/index.html
+++ b/v2/index.html
@@ -93,8 +93,8 @@
                     <img src="/v2/res/images/star.png" class="center-block">
                   </p>
                   <p class="card-text text-xs-center">
-                    <strong>Sảng khoái</strong><br/>
-                    <i>vị thanh, mùi hương tinh tế</i>                    
+                    <strong>Đậm và mạnh</strong><br/>
+                    <i>nhiều caffeine</i>                    
                   </p>                   
                    <p class="card-text text-xs-center">                   
                     <strong>100K/GÓI 250G</strong>
@@ -112,8 +112,8 @@
                     <img src="/v2/res/images/2stars.png" class="center-block">
                   </p>
                    <p class="card-text text-xs-center">
-                    <strong>Sảng khoái</strong><br/>
-                    <i>vị thanh, mùi hương tinh tế</i>                    
+                    <strong>Cân bằng</strong><br/>
+                    <i>đậm vừa, hương vị dễ chịu</i>                    
                   </p>                   
                    <p class="card-text text-xs-center">                   
                     <strong>150K/GÓI 250G</strong>
