--- a/v2/index.html
+++ b/v2/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>H'Biang Demo 02</title>
+      <title>H'Biang - Tích cực sảng khoái</title>
       <link rel="stylesheet" media="screen" href="/v2/res/lib/tether/css/tether.min.css">
       <link rel="stylesheet" media="screen" href="/v2/res/lib/bootstrap/css/meteria.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
