--- a/v2/index.html
+++ b/v2/index.html
@@ -9,7 +9,7 @@
 
     <meta name="description" content="Cà phê Arabica rang xay nguyên chất, cà phê chính gốc Đà lạt" />
     <meta name="keywords" content="cà phê, coffee, arabica, cà phê nguyên chất, cà phê Đà Lạt" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" media="screen" href="/v2/res/lib/tether/css/tether.min.css">
     <link rel="stylesheet" media="screen" href="/v2/res/lib/bootstrap/css/meteria.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
