--- a/v2/index.html
+++ b/v2/index.html
@@ -114,7 +114,7 @@
                             <strong>100K/GÓI 250G</strong>
                         </p>
                         <p class="card-text text-xs-center">
-                            <img src="/v2/res/images/btn-order.png ">
+                            <img src="/v2/res/images/btn-order.png" class="product" style="cursor:pointer">
                         </p>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                             <strong>150K/GÓI 250G</strong>
                         </p>
                         <p class="card-text text-xs-center">
-                            <img src="/v2/res/images/btn-order.png ">
+                            <img src="/v2/res/images/btn-order.png" class="product" style="cursor:pointer">
                         </p>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                             <strong>200K/GÓI 250G</strong>
                         </p>
                         <p class="card-text text-xs-center">
-                            <img src="/v2/res/images/btn-order.png ">
+                            <img src="/v2/res/images/btn-order.png" class="product" style="cursor:pointer">
                         </p>
                     </div>
                 </div>
@@ -309,6 +309,27 @@
         </div>
 
     </div>
+    
+    <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Giỏ hàng</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary btn-md" data-dismiss="modal" style="margin-right:0.5rem;">Mua tiếp</button>
+        <button type="button" class="btn btn-primary btn-md" style="background-color: #a25e33">Đặt hàng</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <script src="/v2/res/lib/jquery/jquery.min.js"></script>
     <script src="/v2/res/lib/tether/js/tether.js"></script>
@@ -322,7 +343,7 @@
         
         $(".product").on("click", function(e){
             e.preventDefault();
-            alert('Order');
+            $('#myModal').modal();
         });
     </script>
 </body>
