--- a/v2/index.html
+++ b/v2/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" media="screen" href="/v2/res/lib/tether/css/tether.min.css">
     <link rel="stylesheet" media="screen" href="/v2/res/lib/bootstrap/css/meteria.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-    <link rel="stylesheet" media="screen" href="/v2/res/css/index.css">
+    <link rel="stylesheet" media="screen" href="/v2/res/css/index.css?v0011">
 </head>
 
 <body>
@@ -367,7 +367,7 @@
                 </tr>          
             </tbody>
         </table>
-        <p class="text-xs-small"><i>(Vui lòng nhập các thông tin bên dưới để hoàn thành việc đặt hàng)</i></p>
+        <p class="text-xs-small"><i>(Vui lòng nhập các thông tin bên dưới để hoàn tất việc đặt hàng)</i></p>
         <div>      
             <div class="form-group">      
                 <label for="exampleTextarea">TÊN KHÁCH HÀNG</label>          
