--- a/v2/index.html
+++ b/v2/index.html
@@ -321,7 +321,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <table class="table">
+        <table class="table table-responsive">
             <thead>
                 <tr>
                     <th class="fit hidden-xs-down">#</th>
