--- a/v2/index.html
+++ b/v2/index.html
@@ -229,32 +229,32 @@
             </div>
             <div class="row">
                 <div class="col-sm-7 offset-sm-1">
-                    <form>
+                    <form id="contact-form">
                         <fieldset>
                             <div class="form-group">
                                 <label for="txtName">HỌ TÊN</label>
-                                <input type="text" class="form-control" id="txtName" aria-describedby="textHelp" placeholder="">
+                                <input type="text" class="form-control" id="txt_name" name="txt_name" maxlength="150" placeholder="">
                             </div>
 
                             <div class="form-group">
                                 <label for="exampleInputEmail1">THÔNG TIN LIÊN HỆ</label>
-                                <input type="text" class="form-control" id="txtName" aria-describedby="txtHelp" placeholder="Điện thoại hoặc email">
+                                <input type="text" class="form-control" id="txt_contactinfo"  maxlength="150" name="txt_contactinfo" placeholder="Điện thoại hoặc email">
                             </div>
 
                             <div class="form-group">
                                 <label for="exampleInputEmail1">ĐỊA CHỈ GIAO HÀNG (Nếu cần)</label>
-                                <input type="text" class="form-control" id="txtName" aria-describedby="emailHelp" placeholder="">
+                                <input type="text" class="form-control" id="txt_address" name="txt_address"  maxlength="500" placeholder="">
                             </div>
 
                             <div class="form-group">
                                 <label for="exampleTextarea">LỜI NHẮN</label>
-                                <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                                <textarea class="form-control" id="txt_notes" name="txt_notes" rows="3"></textarea>
                             </div>
 
 
                         </fieldset>
 
-                        <button type="submit" class="btn btn-primary" style="background-color: #a25e33">&nbsp;GỞI ĐI&nbsp;</button>
+                        <button type="submit" id="btn-contact" class="btn btn-primary" style="background-color: #a25e33">&nbsp;GỞI ĐI&nbsp;</button>
 
                     </form>
                 </div>
@@ -311,6 +311,34 @@
     </div>
     
     <!-- Modal -->
+<div class="modal fade" id="resultModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">CẢM ƠN</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p style="font-size: 1.2em;">
+            H'Biang đã ghi nhận thông tin và sẽ phản hồi trong thời gian sớm nhất.            
+        </p>
+        <p>
+             Trong trường hợp cần gấp quý khách có thể liên lạc trực tiếp qua email <strong>sales@hbiang.com</strong> 
+            hoặc qua điện thoại <strong>0918.760.540</strong>
+        </p>
+        <p>
+
+        </p>
+      </div>
+       <div class="modal-footer">
+        <button type="button" class="btn btn-secondary btn-md" data-dismiss="modal" style="margin-right:0.5rem;">ĐÓNG</button>
+      </div>
+     </div>
+  </div>
+</div>
+
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -331,65 +359,32 @@
                     <th class="fit text-xs-right"></th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <th class="hidden-xs-down" scope="row">1</th>
-                    <td>H'Biang ***</td>
-                    <td class="text-xs-center">
-                        <input class="form-control text-xs-center" min="1" max="9999" type="number" value="5" id="example-number-input">
-                    </td>                   
-                    <td class="text-xs-right">200.000đ</td>
-                    <td class="text-xs-right">
-                        <button type="button" class="btn btn-secondary btn-sm" style="box-shadow: none" title="Xóa">
-                            <i style="color:#aaa;font-size: 1.0rem" class="fa fa-times-circle"></i>
-                        </button>
-                    </td>                    
-                </tr>
-                <tr>
-                    <th class="hidden-xs-down" scope="row">2</th>
-                    <td>H'Biang ***</td>
-                    <td class="text-xs-center">
-                        <input class="form-control text-xs-center" min="1" max="9999" type="number" value="3" id="example-number-input">
-                    </td>                    
-                    <td class="text-xs-right">100.000đ</td>
-                    <td class="text-xs-right">
-                        <button type="button" class="btn btn-secondary btn-sm" style="box-shadow: none" title="Xóa">
-                            <i style="color:#aaa;font-size: 1.0rem" class="fa fa-times-circle"></i>
-                        </button>
-                    </td>
-                </tr>   
-                 <tr>      
-                    <th class="hidden-xs-down" scope="row"></th>       
-                    <td colspan="2" class="text-xs-right">
-                        Tổng cộng
-                    </td>                    
-                    <td class="text-xs-right" style="font-size: 1.2rem"><strong>1.000.000đ</strong></td>
-                    <td></td>
-                </tr>          
+            <tbody>                       
             </tbody>
         </table>
         <p class="text-xs-small"><i>(Vui lòng nhập các thông tin bên dưới để hoàn tất việc đặt hàng)</i></p>
         <div>      
-            <div class="form-group">      
-                <label for="exampleTextarea">TÊN KHÁCH HÀNG</label>          
-                <input class="form-control" type="text" value="" id="txt_name" name="txt_name">
-            </div>
-            <div class="form-group">
-                <label for="exampleTextarea">THÔNG TIN LIÊN HỆ</label>
-                <input type="email" class="form-control" id="txt_contactinfo" name="txt_contactinfo" placeholder="Số điện thoại hoặc Email">                
-            </div>
-            <div class="form-group">
-                <label for="exampleTextarea">ĐỊA CHỈ GIAO HÀNG (nếu cần)</label>
-                <input type="email" class="form-control" id="txt_address" name="txt_address">                
-            </div>
-            <div class="form-group">
-                <label for="exampleTextarea">LỜI NHẮN</label>
-                <textarea class="form-control" id="txt_notes" rows="2" name="txt_notes"></textarea>
-            </div>            
+            <form id="order-form">
+                <div class="form-group">      
+                    <label for="exampleTextarea">TÊN KHÁCH HÀNG</label>          
+                    <input class="form-control" type="text" value="" id="txt_name" name="txt_name"  maxlength="150">
+                </div>
+                <div class="form-group">
+                    <label for="exampleTextarea">THÔNG TIN LIÊN HỆ</label>
+                    <input type="email" class="form-control" id="txt_contactinfo"  maxlength="150" name="txt_contactinfo" placeholder="Số điện thoại hoặc Email">                
+                </div>
+                <div class="form-group">
+                    <label for="exampleTextarea">ĐỊA CHỈ GIAO HÀNG (nếu cần)</label>
+                    <input type="email" class="form-control" id="txt_address" name="txt_address"  maxlength="300">                
+                </div>
+                <div class="form-group">
+                    <label for="exampleTextarea">LỜI NHẮN</label>
+                    <textarea class="form-control" id="txt_notes" rows="2" name="txt_notes"></textarea>
+                </div>     
+            </form>       
         </div>
       </div>
       <div class="modal-footer">
-        <!--<button type="button" class="btn btn-secondary btn-md" data-dismiss="modal" style="margin-right:0.5rem;">Mua tiếp</button>-->
         <button type="button" id="btn-order" class="btn btn-primary btn-md" style="background-color: #a25e33">Đặt hàng</button>
       </div>
     </div>
@@ -524,14 +519,14 @@
         }
 
         function orderFormValidation() {
-            var name = $('#txt_name');
+            var name = $('#order-form #txt_name');
             if (name.val() == '') {
                 alert('Vui lòng nhập Tên khách hàng');
                 name.focus();
                 return false;
             }
 
-            var contact = $('#txt_contactinfo');
+            var contact = $('#order-form #txt_contactinfo');
             if (contact.val() == '') {
                 alert('Vui lòng nhập Thông tin liên hệ');
                 contact.focus();
@@ -542,19 +537,62 @@
         }
 
         function contactFormValidation() {
-            var name = $('#txt_name');
+            var name = $('#contact-form #txt_name');
             if (name.val() == '') {
                 alert('Vui lòng nhập Tên khách hàng');
+                name.focus();
                 return false;
             }
 
-            var contact = $('#txt_contactinfo');
+            var contact = $('#contact-form #txt_contactinfo');
             if (contact.val() == '') {
                 alert('Vui lòng nhập Thông tin liên hệ');
+                contact.focus();
                 return false;
             }
 
             return true;
+        }
+
+        function submitContactForm() {
+            $.ajaxSetup({
+                crossDomain: true,
+                xhrFields: {
+                    withCredentials: false
+                }
+            });
+
+             $.post('http://45.119.81.13/t/test1.aspx', 
+                $('#contact-form').serialize()
+             , function (res) {
+                if (res) {
+                    $('#resultModal').modal();
+                    $('#contact-form')[0].reset();
+                }
+             });         
+        }
+
+        function submitOrderForm() {
+            $.ajaxSetup({
+                crossDomain: true,
+                xhrFields: {
+                    withCredentials: false
+                }
+            });
+
+             $.post('http://45.119.81.13/t/test1.aspx', 
+                $('#order-form').serialize()
+             , function (res) {
+                if (res) {
+                    $('#myModal').modal('hide');
+                    $('#resultModal').modal();
+                    $('#order-form')[0].reset();
+                }
+             });         
+        }
+
+        function showResultDialog() {
+            $('#resultModal').modal();
         }
 
         $(document).ready(function() {
@@ -574,8 +612,18 @@
             // order button event
             $('#btn-order').bind('click', function() {
                 if (orderFormValidation()) {
-                    console.log('summit form');
+                    submitOrderForm();
                 }
+            });
+
+             $('#btn-contact').bind('click', function(e) {
+                e.preventDefault();
+
+                if (contactFormValidation()) {
+                    submitContactForm();
+                }
+
+                return false;
             });
 
             // handle add product button
