--- a/v2/index.html
+++ b/v2/index.html
@@ -234,11 +234,13 @@
                             <div class="form-group">
                                 <label for="txtName">HỌ TÊN</label>
                                 <input type="text" class="form-control" id="txt_name" name="txt_name" maxlength="150" placeholder="">
+                                <div class="form-control-feedback">Vui lòng nhập Họ tên</div>
                             </div>
 
                             <div class="form-group">
                                 <label for="exampleInputEmail1">THÔNG TIN LIÊN HỆ</label>
                                 <input type="text" class="form-control" id="txt_contactinfo"  maxlength="150" name="txt_contactinfo" placeholder="Điện thoại hoặc email">
+                                <div class="form-control-feedback">Vui lòng nhập Thông tin liên hệ</div>
                             </div>
 
                             <div class="form-group">
@@ -324,9 +326,9 @@
         <p style="font-size: 1.2em;">
             H'Biang đã ghi nhận thông tin và sẽ phản hồi trong thời gian sớm nhất.            
         </p>
-        <p>
-             Trong trường hợp cần gấp quý khách có thể liên lạc trực tiếp qua email <strong>sales@hbiang.com</strong> 
-            hoặc qua điện thoại <strong>0918.760.540</strong>
+        <p class="text-muted">
+            Trong trường hợp cần gấp quý khách có thể liên lạc trực tiếp qua email <strong>sales@hbiang.com</strong> 
+            hoặc qua điện thoại <strong>0918.760.540</strong>            
         </p>
         <p>
 
@@ -368,10 +370,12 @@
                 <div class="form-group">      
                     <label for="exampleTextarea">TÊN KHÁCH HÀNG</label>          
                     <input class="form-control" type="text" value="" id="txt_name" name="txt_name"  maxlength="150">
+                    <div class="form-control-feedback">Vui lòng nhập Tên khách hàng</div>
                 </div>
                 <div class="form-group">
                     <label for="exampleTextarea">THÔNG TIN LIÊN HỆ</label>
                     <input type="email" class="form-control" id="txt_contactinfo"  maxlength="150" name="txt_contactinfo" placeholder="Số điện thoại hoặc Email">                
+                    <div class="form-control-feedback">Vui lòng nhập Thông tin liên hệ</div>
                 </div>
                 <div class="form-group">
                     <label for="exampleTextarea">ĐỊA CHỈ GIAO HÀNG (nếu cần)</label>
@@ -519,16 +523,25 @@
         }
 
         function orderFormValidation() {
+            $('#order-form .form-group').removeClass('has-danger');
+            $('#order-form .form-control-feedback').hide();         
+
             var name = $('#order-form #txt_name');
             if (name.val() == '') {
-                alert('Vui lòng nhập Tên khách hàng');
+                var row = name.closest('.form-group');
+                row.addClass('has-danger');
+                row.find('.form-control-feedback').show();
+
                 name.focus();
                 return false;
             }
 
             var contact = $('#order-form #txt_contactinfo');
             if (contact.val() == '') {
-                alert('Vui lòng nhập Thông tin liên hệ');
+                var row = contact.closest('.form-group');
+                row.addClass('has-danger');
+                row.find('.form-control-feedback').show();
+
                 contact.focus();
                 return false;
             }
@@ -537,16 +550,27 @@
         }
 
         function contactFormValidation() {
+            $('#contact-form .form-group').removeClass('has-danger');
+            $('#contact-form .form-control-feedback').hide();            
+
             var name = $('#contact-form #txt_name');
             if (name.val() == '') {
-                alert('Vui lòng nhập Tên khách hàng');
-                name.focus();
+                
+                var row = name.closest('.form-group');
+                row.addClass('has-danger');
+                row.find('.form-control-feedback').show();
+
+                name.focus();                
+
                 return false;
             }
 
             var contact = $('#contact-form #txt_contactinfo');
             if (contact.val() == '') {
-                alert('Vui lòng nhập Thông tin liên hệ');
+                var row = contact.closest('.form-group');
+                row.addClass('has-danger');
+                row.find('.form-control-feedback').show();
+
                 contact.focus();
                 return false;
             }
@@ -596,6 +620,8 @@
         }
 
         $(document).ready(function() {
+            $('.form-control-feedback').hide();
+
             // re-map when resize image
             $('map').imageMapResize();
             
