--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             <div class="form-group">
                                 <label for="exampleTextarea">LỜI NHẮN</label>                                
                                 <textarea class="form-control" id="txt_notes" name="txt_notes" rows="3"></textarea>
-                                <div class="form-control-feedback">Vui lòng nhập lời nhắn</div>
+                                <div class="form-control-feedback">Vui lòng nhập Lời nhắn</div>
                             </div>
 
 
