--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>H'Biang cà phê - Tích cực, sảng khoái</title>
+    <title>H'Biang Cà Phê - Tích Cực, Sảng Khoái</title>
 
     <meta name="description" content="Cà phê Arabica rang xay nguyên chất, cà phê chính gốc Đà lạt" />
     <meta name="keywords" content="cà phê, coffee, arabica, cà phê nguyên chất, cà phê Đà Lạt" />
