--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="hidden-xs-down col-sm-12" id="page01-padding-01"></div>
                 <div class="col-xs-6 offset-xs-3 col-sm-4 offset-sm-7">
-                    <img class="img-fluid" alt="Responsive image" id="img-page01-slogan" src="/v2/res/images/page01-slogan.png" />
+                    <img class="img-fluid" alt="Responsive image" id="img-page01-slogan" src="/v2/res/images/page01-slogan-01.png" />
                 </div>
                 <div class="col-sm-10 offset-sm-1">
                     <img class="img-fluid" src="/v2/res/images/page01-banner.png" style="margin-top:1.5rem" />
@@ -364,7 +364,7 @@
             </thead>
             <tbody>                       
             </tbody>
-        </table>
+        </table>        
         <p class="text-xs-small"><i>(Vui lòng nhập các thông tin bên dưới để hoàn tất việc đặt hàng)</i></p>
         <div>      
             <form id="order-form">
@@ -394,6 +394,9 @@
         </div>
       </div>
       <div class="modal-footer">
+          <!--
+        <button type="button" class="btn btn-secondary btn-md" data-dismiss="modal" style="margin-right:0.5rem;">Quay lại</button>
+        -->
         <button type="button" id="btn-order" class="btn btn-primary btn-md" style="background-color: #a25e33">Đặt hàng</button>
       </div>
     </div>
