--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 }
             });
 
-             $.post('http://45.119.81.13/t/contact.aspx', 
+             $.post('http://english.5book.vn/t/contact.aspx', 
                 $('#contact-form').serialize()
              , function (res) {
                 if (res) {
