--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                 $(id).val(products[i].qty);                
             }
 
-             $.post('http://45.119.81.13/t/order.aspx', 
+             $.post('http://english.5book.vn/t/order.aspx', 
                 $('#order-form').serialize()
              , function (res) {
                 if (res) {
