--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 }
             });
 
-             $.post('http://english.5book.vn/t/contact.aspx', 
+             $.post('http://128.199.157.251/t/contact.php', 
                 $('#contact-form').serialize()
              , function (res) {
                 if (res) {
@@ -628,7 +628,7 @@
                 $(id).val(products[i].qty);                
             }
 
-             $.post('http://english.5book.vn/t/order.aspx', 
+             $.post('http://128.199.157.251/t/order.php', 
                 $('#order-form').serialize()
              , function (res) {
                 if (res) {
