--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 }
             });
 
-             $.post('https://vnprice.com/mail/contact.php', 
+             $.post('https://us-central1-hbiang.cloudfunctions.net/emailContact', 
                 $('#contact-form').serialize()
              , function (res) {
                 if (res) {
@@ -628,7 +628,7 @@
                 $(id).val(products[i].qty);                
             }
 
-             $.post('https://vnprice.com/mail/order.php', 
+             $.post('https://us-central1-hbiang.cloudfunctions.net/emailOrder', 
                 $('#order-form').serialize()
              , function (res) {
                 if (res) {
