--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" media="screen" href="/v2/res/lib/tether/css/tether.min.css">
     <link rel="stylesheet" media="screen" href="/v2/res/lib/bootstrap/css/meteria.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-    <link rel="stylesheet" media="screen" href="/v2/res/css/index.css?v0015">
+    <link rel="stylesheet" media="screen" href="/v2/res/css/index.css?v0016">
 </head>
 
 <body>
@@ -289,6 +289,16 @@
 
     <div id="page-05" style="background-color: #926f3c;padding: 20px 0px;margin-top:3rem;">
         <div class="container">
+            <div class="row" style="padding-top: 1rem;padding-bottom: 1rem;text-align: center;">
+                <ul id="footer-links">
+                    <!-- <li><a href="/policy.html">Hướng dẫn mua hàng</a></li> -->
+                    <li><a href="/payment.html">Hình thức thanh toán</a></li>
+                    <li><a href="/delivery.html">Chính sách giao hàng</a></li>
+                    <li><a href="/terms.html">Chính sách bảo hành đổi trả</a></li>
+                    <li><a href="/policy.html">Chính sách bảo mật thông tin</a></li>
+                </ul>
+            </div>
+
             <div class="row">
                 <div class="col-xs-12">
                     <p style="font-size: 0.8rem;color: #fff">
@@ -304,6 +314,9 @@
                 </div>
 
             </div>
+
+           
+
             <div class="row" style="padding-top: 2rem;">
                 <div class="col-sm-12">
                     <p style="color: #fff">Copyright © 2016 H'Biang Coffee Roastery. All Rights Reserved.</p>
@@ -394,7 +407,7 @@
         </div>
       </div>
       <div class="modal-footer">
-          <!--
+        <!--
         <button type="button" class="btn btn-secondary btn-md" data-dismiss="modal" style="margin-right:0.5rem;">Quay lại</button>
         -->
         <button type="button" id="btn-order" class="btn btn-primary btn-md" style="background-color: #a25e33">Đặt hàng</button>
