--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@
                                 <div class="form-control-feedback">Vui lòng nhập Lời nhắn</div>
                             </div>
 
-
+                            <div class="form-notes" style="font-size: 0.9rem; color:#888;margin-bottom: 1rem;">
+                                H'Biang ghi nhận thông tin cá nhân để giao hàng và liên lạc, khi nhấn Gởi đi, quý khách đã đồng ý với các quy định bảo mật thông tin tại đây <a target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
+                            </div>
                         </fieldset>
 
                         <button type="submit" id="btn-contact" class="btn btn-primary" style="background-color: #a25e33">&nbsp;GỞI ĐI&nbsp;</button>
@@ -426,6 +428,9 @@
                     <textarea class="form-control" id="txt_notes" rows="2" name="txt_notes"></textarea>
                 </div>     
             </form>       
+        </div>
+        <div class="form-notes" style="font-size: 0.9rem; color:#888;">
+            H'Biang ghi nhận thông tin cá nhân để giao hàng và liên lạc, khi nhấn đặt hàng, quý khách đã đồng ý với các quy định bảo mật thông tin tại đây <a target="_blank" href="/policy.html">Chính sách bảo mật thông tin</a>
         </div>
       </div>
       <div class="modal-footer">
