--- a/index.html
+++ b/index.html
@@ -637,6 +637,9 @@
         }
 
         function submitContactForm() {
+            if (!confirm('Bạn đã kiểm tra kỹ thông tin trước khi Góp ý?')) {
+                return;
+            }
             $.ajaxSetup({
                 crossDomain: true,
                 xhrFields: {
@@ -655,6 +658,9 @@
         }
 
         function submitOrderForm() {
+            if (!confirm('Bạn đã kiểm tra kỹ thông tin trước khi Đặt hàng?')) {
+                return;
+            }
             $.ajaxSetup({
                 crossDomain: true,
                 xhrFields: {
